deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
        - name: go-web-app
          image: 491085414563.dkr.ecr.us-east-1.amazonaws.com/go-web-app:latest  # change to your ECR image URL
          ports:
            - containerPort: 8080
