ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k88pro.devfaizi.xyz 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-service
                port:
                  number: 80
